Add advanced parameter to filter mz values